知识库和结构 重构